                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 24-08-2005 fixed: Share lock - numeric Password: cancel was brocken [ifinite loop] [GeminiServer]
 - 24-08-2005 fixed: Share lock - numeric Password: dialog descriptions was brocken   [GeminiServer]
 - 24-08-2005 fixed: slideshow sometimes showed the wrong second image
 - 23-08-2005 fixed: dvdplayer code cleanup and a fix for incrorrect nr of audio channels being displayed
 - 23-08-2005 changed: dvdplayer is now not allowed to drop more than 15 frames in a row. (makes it display something atleast when very late)
 - 23-08-2005 changed: made fliptime calculation an moving average, to reduce choppyness in dvdplayer
 - 23-08-2005 added: exception handling to threaded renderer (includes changes to how graphiccontext was locked to allow it to be unlocked properly on an exception)
 - 23-08-2005 fixed: dvdplayer would startup with no video showing. than after a while audio would stop too
 - 23-08-2005 fixed: Volumeslider in video OSD.
 - 23-08-2005 added: visualisation.enabled tag to be used in skin conditional visible tags, enabled means a visualisation has been set in settings.
 - 23-08-2005 fixed: In some occasions controls would still be visible even when conditional visible tag would set it to invisible.
 - 23-08-2005 added: zip/rar support in webserver.
 - 23-08-2005 fixed: dvdplayer would crash if any audio other than AC3 or DTS was available when opening audio osd.
 - 22-08-2005 fixed: graphiccontext was being locked unneccisarily in application thread, caused a minor slowdown
 - 22-08-2005 changed: Ignore "The " while sorting only affects database views, not file views.
 - 22-08-2005 fixed: FLAC tags broken